@@ -47,6 +47,9 @@ New checkers
 Removed checkers
 ================
 
+* The ``no-init`` (W0232) warning has been removed. It's ok to not have an ``__init__`` in a class.
+
+  Closes #2409
 
 Extensions
 ==========
