@@ -184,6 +184,8 @@ DELETED_MESSAGES = [
     DeletedMessage("C0326", "bad-whitespace"),
     # Pylint 1.4.3
     DeletedMessage("W0142", "star-args"),
+    # https://github.com/PyCQA/pylint/issues/2409
+    DeletedMessage("W0232", "no-init"),
 ]
 
 
