@@ -1,4 +1,4 @@
-# pylint: disable=too-few-public-methods,no-init, useless-object-inheritance
+# pylint: disable=too-few-public-methods, useless-object-inheritance
 """check for scope problems"""
 
 __revision__ = None
