@@ -1,3 +1,3 @@
 [Messages Control]
-disable=no-init,too-few-public-methods,undefined-variable
+disable=too-few-public-methods,undefined-variable
 confidence=INFERENCE,HIGH,UNDEFINED
