@@ -1,4 +1,4 @@
-# -*- pylint: disable=no-init,too-few-public-methods, useless-object-inheritance
+# -*- pylint: disable=too-few-public-methods, useless-object-inheritance
 """Test that decorators sees the class namespace - just like
 function default values does but function body doesn't.
 
