@@ -1,7 +1,7 @@
 """Test that inheriting from something which is not
 a class emits a warning. """
 
-# pylint: disable=no-init, import-error, invalid-name, using-constant-test, useless-object-inheritance
+# pylint: disable=import-error, invalid-name, using-constant-test, useless-object-inheritance
 # pylint: disable=missing-docstring, too-few-public-methods
 
 from missing import Missing
