@@ -1,2 +1,2 @@
-super-init-not-called:25:4:25:16:ZZZZ.__init__:__init__ method from base class 'BBBB' is not called:INFERENCE
-super-init-not-called:58:4:58:16:AssignedInit.__init__:__init__ method from base class 'NewStyleC' is not called:INFERENCE
+super-init-not-called:32:4:32:16:ZZZZ.__init__:__init__ method from base class 'BBBB' is not called:INFERENCE
+super-init-not-called:64:4:64:16:AssignedInit.__init__:__init__ method from base class 'NewStyleC' is not called:INFERENCE
