@@ -1,7 +1,7 @@
 """
 Checks that iterable metaclasses are recognized by pylint.
 """
-# pylint: disable=missing-docstring,too-few-public-methods,no-init,no-self-use,unused-argument,bad-mcs-method-argument
+# pylint: disable=missing-docstring,too-few-public-methods,no-self-use,unused-argument,bad-mcs-method-argument
 # pylint: disable=wrong-import-position
 # metaclasses as iterables
 class Meta(type):
