@@ -1,4 +1,4 @@
-# pylint: disable=missing-docstring,no-init,unused-argument,invalid-name,too-few-public-methods
+# pylint: disable=missing-docstring,unused-argument,invalid-name,too-few-public-methods
 
 class A:
     def __init__(self):
