@@ -1,6 +1,6 @@
 """Test warnings about access to undefined variables
 for various Python 3 constructs. """
-# pylint: disable=too-few-public-methods, no-init, no-self-use, import-error
+# pylint: disable=too-few-public-methods, no-self-use, import-error
 # pylint: disable=wrong-import-position, invalid-metaclass, useless-object-inheritance
 class Undefined:
     """ test various annotation problems. """
