@@ -1,5 +1,5 @@
 """Check for nonlocal and used-before-assignment"""
-# pylint: disable=missing-docstring, unused-variable, no-init, too-few-public-methods
+# pylint: disable=missing-docstring, unused-variable, too-few-public-methods
 
 __revision__ = 0
 
