@@ -1,6 +1,6 @@
 """Verify if constant tests are used inside if statements."""
 # pylint: disable=invalid-name, missing-docstring,too-few-public-methods
-# pylint: disable=no-init,expression-not-assigned, useless-object-inheritance
+# pylint: disable=expression-not-assigned, useless-object-inheritance
 # pylint: disable=missing-parentheses-for-call-in-test, unnecessary-comprehension, condition-evals-to-constant
 # pylint: disable=use-list-literal, use-dict-literal
 
